<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/almost_white_background"
  android:paddingTop="5dp"
  android:paddingBottom="5dp"
  android:minWidth="450dp"
  android:minHeight="200dp"
  >
    
  <TextView 
    android:id="@+id/help_title"
    style="@style/RegMedium"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"        
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="@drawable/almost_white_background"
    android:textColor="@drawable/dark_blue_d1"
    android:text="@string/help_title_english"
  />
   
  <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@drawable/dark_blue"
  />
  
  <ScrollView
    android:id="@+id/scrollview"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="30dp"
    android:fadeScrollbars="false"
    android:layout_weight="1"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="@drawable/almost_white_background"> 
  
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
      <TextView 
        android:id="@+id/help_intro"
        style="@style/RegSmall"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_help_english"
      />
      <TextView 
        android:id="@+id/case_one_intro"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_one_intro_english"
        android:paddingTop="4dp"
      />
      <TextView 
          android:id="@+id/example_1"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/example_english"
          android:paddingRight="20dp"
        />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/case_one_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_one_english"
          android:paddingRight="20dp"
        />
        <TextView 
          android:id="@+id/case_one_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_one_spanish"
        />
      </LinearLayout>
      <TextView 
         android:id="@+id/case_one_note"
         style="@style/RegSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/case_one_note_english"/>
      <TextView 
        android:id="@+id/case_two_intro"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_two_intro_english"
        android:paddingTop="4dp"
      />
      <TextView 
        android:id="@+id/example_2"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/examples_english"
        android:paddingTop="4dp"
      />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/case_two_a_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_two_a_english"
          android:paddingRight="20dp"
        />
        <TextView 
          android:id="@+id/case_two_a_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_two_a_spanish"
        />
      </LinearLayout>  
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        >
        <TextView 
          android:id="@+id/case_two_b_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_two_b_english"
          android:paddingRight="20dp"/>
        <TextView 
          android:id="@+id/case_two_b_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_two_b_spanish"/>
       </LinearLayout>  
       <TextView 
         android:id="@+id/case_two_b_note"
         style="@style/RegSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/case_two_b_note_english"/>
       <TextView 
        android:id="@+id/case_three_intro"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_three_intro_english"
        android:paddingTop="4dp"
       />
       <TextView 
          android:id="@+id/example_3"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/example_english"
          android:paddingRight="20dp"
        />
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/case_three_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_three_english"
          android:paddingRight="20dp"
        />
        <TextView 
          android:id="@+id/case_three_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_three_spanish"
        />
        
        </LinearLayout> 
        <TextView 
         android:id="@+id/case_three_note"
         style="@style/RegSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/case_three_note_english"/>
        
        <TextView 
        android:id="@+id/case_four_intro"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_four_intro_english"
        android:paddingTop="4dp"
       />
        <TextView 
          android:id="@+id/example_4"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/example_english"
          android:paddingRight="20dp"
        />
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/case_four_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_four_english"
          android:paddingRight="20dp"
        />
        <TextView 
          android:id="@+id/case_four_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_four_spanish"
        />        
        </LinearLayout> 
        <TextView 
         android:id="@+id/case_four_note"
         style="@style/RegSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/case_four_note_english"/>
        
        <TextView 
        android:id="@+id/case_five_intro"
        style="@style/RegSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/case_five_intro_english"
        android:paddingTop="4dp"
       />
        <TextView 
          android:id="@+id/example_5"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/example_english"
          android:paddingRight="20dp"
        />
       <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
          android:id="@+id/case_five_english"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_five_english"
          android:paddingRight="20dp"
        />
        <TextView 
          android:id="@+id/case_five_spanish"
          style="@style/RegSmall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/case_five_spanish"
        />        
        </LinearLayout> 
        <TextView 
         android:id="@+id/case_five_note"
         style="@style/RegSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/case_five_note_english"/>
    </LinearLayout>
  </ScrollView>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="9dp"
    android:paddingRight="5dp"
  >
    <Button 
      android:id="@+id/btn_ok"
      style="@style/RegMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/terminado"
      android:layout_weight="1">
    </Button>
    
    <Button 
      android:id="@+id/btn_language"
      style="@style/RegMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"      
      android:text="English"
      android:layout_weight="1">
    </Button> 
    
  </LinearLayout>
  
  </LinearLayout>
		