<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/almost_white_background"
  android:paddingTop="5dp"
  android:paddingBottom="5dp"
  android:minWidth="450dp"
  android:minHeight="200dp"
  >

  <TextView
    android:id="@+id/help_title_english"
    style="@style/RegMedium"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="@drawable/almost_white_background"
    android:textColor="@drawable/dark_blue_d1"
    android:text="Screen Explanation"
    android:visibility="gone"
    />

  <TextView
    android:id="@+id/help_title_spanish"
    style="@style/RegMedium"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="@drawable/almost_white_background"
    android:textColor="@drawable/dark_blue_d1"
    android:text="Explicación de Pantalla"
    />
   
  <View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@drawable/dark_blue"
  />
  
  <ScrollView
    android:id="@+id/scrollview"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="30dp"
    android:fadeScrollbars="false"
    android:layout_weight="1"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="5dp"
    android:background="@drawable/almost_white_background">
  
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="14dp"
    android:paddingBottom="20dp">
      <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/english_explanation"
        android:visibility="gone">
        <TextView
          android:id="@+id/en_header_normal"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Normally"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/en_normal_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_normal_explanation_one_a"
          android:paddingTop="4dp"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/en_normal_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_normal"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>
        <TextView
          android:id="@+id/en_normal_explanation_two"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_normal_explanation_two_a"
          android:layout_marginLeft="5dp"/>

        <TextView
          android:id="@+id/en_header_meaning"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Different Meaning in Context"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/en_meaning_explanation_two"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_meaning_explanation_two_a"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/en_meaning_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_meaning"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>
        <TextView
          android:id="@+id/en_meaning_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_meaning_explanation_one_a"
          android:layout_marginLeft="5dp"/>

        <TextView
          android:id="@+id/en_header_correction"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="English Word Correction"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/en_correction_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_correction_explanation_one_a"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/en_correction_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_corrected"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>

        <TextView
          android:id="@+id/en_header_two"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Parenthesis and Extra Words..."
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/en_parenthesis_explanation"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_parenthesis_explanation_a"
          android:layout_marginLeft="5dp"/>
        <TextView
          android:id="@+id/en_header_and"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="And..."
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/en_plus_explanation"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/en_plus_explanation_a"
          android:layout_marginLeft="5dp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/spanish_explanation"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <TextView
          android:id="@+id/sp_header_normal"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Normalmente"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/sp_normal_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_normal_explanation_one_a"
          android:paddingTop="4dp"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/sp_normal_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_normal"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>

        <TextView
          android:id="@+id/sp_header_meaning"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Significado en Contexto"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/sp_meaning_explanation_two"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_meaning_explanation_two_a"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/sp_meaning_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_meaning"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>
        <TextView
          android:id="@+id/sp_meaning_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_meaning_explanation_one_a"
          android:layout_marginLeft="5dp"/>

        <TextView
          android:id="@+id/sp_header_correction"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Palabras en Inglés Corregidas"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/sp_correction_explanation_one"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_correction_explanation_one_a"
          android:layout_marginLeft="5dp"/>
        <ImageView
          android:id="@+id/sp_correction_image"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:src="@drawable/word_list_help_corrected"
          android:layout_marginTop="6dp"
          android:layout_marginBottom="6dp"
          android:layout_marginLeft="2dp"/>

        <TextView
          android:id="@+id/sp_header_two"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Paréntesis y Palabras Extra"
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/sp_parenthesis_explanation"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_parenthesis_explanation_a"
          android:layout_marginLeft="5dp"/>
        <TextView
          android:id="@+id/sp_header_and"
          android:textSize="18sp"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Y..."
          android:layout_marginTop="6dp"/>
        <TextView
          android:id="@+id/sp_plus_explanation"
          android:textSize="22sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sp_plus_explanation_a"
          android:layout_marginLeft="5dp"/>
      </LinearLayout>

    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="9dp"
    android:paddingRight="5dp"
  >
    <Button 
      android:id="@+id/btn_ok"
      style="@style/RegMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/terminado"
      android:layout_weight="1">
    </Button>
    
    <Button 
      android:id="@+id/btn_language"
      style="@style/RegMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"      
      android:text="English"
      android:layout_weight="1">
    </Button> 
    
  </LinearLayout>
  
  </LinearLayout>
		